--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wpserve" : "node_modules/.bin/webpack-dev-server"
+    "wpserve": "node_modules/.bin/webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@types/node": "^7.0.31",
     "@types/react": "^15.0.34",
     "@types/react-dom": "^15.5.1",
+    "@types/react-redux": "^4.4.46",
     "@types/react-router": "^4.0.12",
     "@types/react-router-dom": "^4.0.5",
     "css-loader": "^0.28.4",
@@ -31,7 +32,9 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.2"
   }
 }
