--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
@@ -11,7 +11,9 @@
         ],
         "types": [
             "node",
-            "async"
+            "async",
+            "react-redux",
+            "react"
         ]
     },
     "include": [
